--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,77 @@
   <link rel="stylesheet" href="assets/css/fontawesome.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
+<style>
+  /* ULTRA PREMIUM CONTACT PAGE */
+.text-gradient {
+  background: linear-gradient(135deg, #2A07F9, #068FFF);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+
+.contact-form-card {
+  background: rgba(255, 255, 255, 0.95);
+  backdrop-filter: blur(12px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0 25px 50px rgba(0, 0, 0, 0.1);
+  transition: transform 0.4s ease;
+}
+.contact-form-card:hover {
+  transform: translateY(-10px);
+}
+.glass-overlay {
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background: linear-gradient(135deg, rgba(42,7,249,0.05), rgba(6,143,255,0.05));
+  pointer-events: none;
+  border-radius: 16px;
+}
+
+.info-card {
+  transition: all 0.4s ease;
+  min-height: 180px;
+}
+.info-card:hover {
+  transform: translateY(-8px);
+  box-shadow: 0 20px 40px rgba(0,0,0,0.2) !important;
+}
+
+.bg-gradient-primary {
+  background: linear-gradient(135deg, #2A07F9, #044DBC);
+}
+.bg-gradient-success {
+  background: linear-gradient(135deg, #28a745, #20c997);
+}
+.bg-gradient-warning {
+  background: linear-gradient(135deg, #ffc107, #fd7e14);
+}
+
+.hero-content, .contact-form-card {
+  animation: fadeInUp 0.8s ease-out;
+}
+@keyframes fadeInUp {
+  from { opacity: 0; transform: translateY(30px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+.highlight-item {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  background: rgba(255,255,255,0.8);
+  padding: 12px 16px;
+  border-radius: 12px;
+  min-width: 180px;
+}
+.highlight-item i { min-width: 40px; }
+
+@media (max-width: 768px) {
+  .contact-hero .row { text-align: center; }
+  .highlight-item { justify-content: center; }
+  .contact-form-card { margin-top: 2rem; }
+}
+</style>
 
 <body>
   <div class="preloader"><button class="th-btn preloaderCls">Cancel Preloader</button>
@@ -56,54 +127,40 @@
     <p class="color-scheme-text">Or custom color..</p><input type="color" id="thcolorpicker" value="#2A07F9">
   </div>
   <div class="th-menu-wrapper">
-    <div class="th-menu-area text-center"><button class="th-menu-toggle"><i class="fal fa-times"></i></button>
-      <div class="mobile-logo"><a href="index.html"><img src="assets/img/logo.svg" alt="Rakar"></a></div>
+    <div class="th-menu-area text-center">
+      <button class="th-menu-toggle"><i class="fal fa-times"></i></button>
+      <div class="mobile-logo">
+        <a href="index.html"><img src="assets/img/logo/logo.svg" alt="Rakar"></a>
+      </div>
+
       <div class="th-mobile-menu">
         <ul>
-          <li class="menu-item-has-children"><a href="index.html">Home</a>
-            <!-- <ul class="sub-menu">
-              <li><a href="index.html">Home Handyman</a></li>
-              <li><a href="home-office-repair.html">Home Office Repair</a></li>
-              <li><a href="home-electrician.html">Home Electrician</a></li>
-              <li><a href="home-air-condition.html">Home Air Condition</a></li>
-              <li><a href="home-carpentry.html">Home Carpentry</a></li>
-            </ul> -->
-          </li>
+          <!-- Home -->
+          <li><a href="index.html">Home</a></li>
+
+          <!-- About -->
           <li><a href="about.html">About Us</a></li>
-          <li class="menu-item-has-children"><a href="service.html">Services</a>
-            <!-- <ul class="sub-menu">
-              <li><a href="service.html">Our Services</a></li>
-              <li><a href="service-details.html">Service Details</a></li>
-            </ul> -->
-          </li>
-          <li class="menu-item-has-children"><a href="financing.html">Financing</a>
-            <!-- <ul class="sub-menu">
-              <li class="menu-item-has-children"><a href="#">Shop</a>
-                <ul class="sub-menu">
-                  <li><a href="shop.html">Shop</a></li>
-                  <li><a href="shop-details.html">Shop Details</a></li>
-                  <li><a href="cart.html">Cart Page</a></li>
-                  <li><a href="checkout.html">Checkout</a></li>
-                  <li><a href="wishlist.html">Wishlist</a></li>
-                </ul> -->
-              </li>
-              <li><a href="pricing.html">Maintenance Plan</a></li>
-              <li><a href="contact.html">Contact</a></li>
-              <li><a href="location.html">location</a></li>
+
+          <!-- Services (only dropdown item) -->
+          <li class="menu-item-has-children">
+            <a href="service.html">Services</a>
+            <ul class="sub-menu">
+              <li><a href="service.html">All Services</a></li>
+              <!-- <li><a href="service-details.html">Service Details</a></li> -->
             </ul>
           </li>
-          <!-- <li class="menu-item-has-children"><a href="#">Blog</a>
-            <ul class="sub-menu">
-              <li><a href="blog.html">Blog</a></li>
-              <li><a href="blog-details.html">Blog Details</a></li>
-            </ul>
-          </li> -->
-          <!-- <li class="menu-item-has-children"><a href="#">Project</a>
-            <ul class="sub-menu">
-              <li><a href="project.html">Project</a></li>
-              <li><a href="project-details.html">Project Details</a></li>
-            </ul>
-          </li> -->
+
+          <!-- Financing -->
+          <li><a href="financing.html">Financing</a></li>
+
+          <!-- Maintenance Plan -->
+          <li><a href="pricing.html">Maintenance Plan</a></li>
+
+          <!-- Contact -->
+          <li><a href="contact.html">Contact Us</a></li>
+
+          <!-- Location -->
+          <li><a href="location.html">Location</a></li>
         </ul>
       </div>
     </div>
@@ -222,92 +279,162 @@
       </div>
     </div>
   </header>
-  <div class="breadcumb-wrapper" data-bg-src="assets/img/bg/breadcumb-bg.jpg">
-    <div class="container">
-      <div class="breadcumb-content">
-        <h1 class="breadcumb-title">Contact Us</h1>
-        <ul class="breadcumb-menu">
-          <li><a href="index.html">Home</a></li>
-          <li>Contact Us</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div class="space">
-    <div class="container">
-      <div class="title-area text-center"><span class="sub-title"><img src="assets/img/theme-img/title_icon.svg"
-            alt="Icon">Get In Touch</span>
-        <h2 class="sec-title">Our Contact Information</h2>
-      </div>
-      <div class="row gy-4">
-        <div class="col-xl-4 col-md-6">
-          <div class="team-contact">
-            <div class="icon-btn"><i class="fas fa-location-dot"></i></div>
-            <div class="media-body">
-              <h5 class="box-title">Our Address</h5>
-              <p class="box-text">2690 Hiltona Street Victoria Road, New York, Canada</p>
+ <!-- ===== ULTRA PREMIUM CONTACT PAGE START ===== -->
+<div class="contact-hero space-top space-extra-bottom" style="background: linear-gradient(135deg, #f8f9ff 0%, #e6f0ff 100%); position: relative; overflow: hidden;">
+  <div class="container">
+    <div class="row align-items-center g-5">
+      <!-- Left: Hero Content -->
+      <div class="col-lg-6">
+        <div class="hero-content pe-xl-5">
+          <span class="sub-title d-inline-block bg-white px-3 py-2 rounded-pill shadow-sm mb-3">
+            <img src="assets/img/theme-img/title_icon.svg" alt="" class="me-2"> Get In Touch
+          </span>
+          <h1 class="hero-title display-4 fw-bold mb-4">
+            We're Here to <span class="text-gradient">Help You</span>
+          </h1>
+          <p class="lead text-muted mb-4">
+            Need HVAC service in Winnipeg? Our expert team is ready 24/7. Call, email, or fill the form — we'll respond within minutes.
+          </p>
+          <div class="contact-highlights d-flex flex-wrap gap-4">
+            <div class="highlight-item">
+              <i class="fas fa-phone-volume text-primary fs-3"></i>
+              <div>
+                <small class="text-muted">Call Anytime</small>
+                <p class="mb-0 fw-bold"><a href="tel:+(204)951-1317">+(204) 951-1317</a></p>
+              </div>
             </div>
-          </div>
-        </div>
-        <div class="col-xl-4 col-md-6">
-          <div class="team-contact">
-            <div class="icon-btn"><i class="fas fa-phone"></i></div>
-            <div class="media-body">
-              <h5 class="box-title">Phone Number</h5>
-              <p class="box-text"><a href="tel:+(204) 951-1317">+(204) 951-1317</a> <a href="tel:+(204) 951-1317">+(204) 951-1317</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-4 col-md-6">
-          <div class="team-contact">
-            <div class="icon-btn"><i class="fas fa-envelope"></i></div>
-            <div class="media-body">
-              <h5 class="box-title">Email Address</h5>
-              <p class="box-text"><a href="mailto:support24@rakar.com">support24@rakar.com</a> <a
-                  href="mailto:contact@rakar.com">contact@rakar.com</a></p>
+            <div class="highlight-item">
+              <i class="fas fa-clock text-success fs-3"></i>
+              <div>
+                <small class="text-muted">Working Hours</small>
+                <p class="mb-0 fw-bold">Mon–Fri: 8AM–7PM</p>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="space" data-bg-src="assets/img/bg/contact_bg_6.jpg">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-xl-6 text-center text-xl-start">
-          <form action="mail.php" method="POST" class="contact-form ajax-contact">
-            <h2 class="sec-title">Get a Quote</h2>
-            <div class="row">
-              <div class="form-group col-md-6"><input type="text" class="form-control" name="name" id="name"
-                  placeholder="Your Name"> <i class="fal fa-user"></i></div>
-              <div class="form-group col-md-6"><input type="email" class="form-control" name="email" id="email"
-                  placeholder="Email Address"> <i class="fal fa-envelope"></i></div>
-              <div class="form-group col-md-6"><input type="tel" class="form-control" name="number" id="number"
-                  placeholder="Phone Number"> <i class="fal fa-phone"></i></div>
-              <div class="form-group col-md-6"><select name="subject" id="subject" class="form-select">
-                  <option value="" disabled="disabled" selected="selected" hidden>Select Subject</option>
-                  <option value="General Query">General Query</option>
-                  <option value="Help Support">Help Support</option>
-                  <option value="Sales Support">Sales Support</option>
-                </select> <i class="fal fa-chevron-down"></i></div>
-              <div class="form-group col-12"><textarea name="message" id="message" cols="30" rows="3"
-                  class="form-control" placeholder="Your Message"></textarea> <i class="fal fa-pencil"></i></div>
-              <div class="form-btn col-12"><button class="th-btn">Submit Request<i
-                    class="fas fa-paper-plane ms-2"></i></button></div>
+
+      <!-- Right: Floating Form Card -->
+      <div class="col-lg-6">
+        <div class="contact-form-card bg-white p-5 rounded-4 shadow-xl position-relative overflow-hidden" style="z-index: 2;">
+          <div class="glass-overlay"></div>
+          <h3 class="mb-4 fw-bold text-dark">Request a Free Quote</h3>
+          <form action="mail.php" method="POST" class="contact-form ajax-contact modern-form">
+            <div class="row g-3">
+              <div class="col-md-6">
+                <div class="form-floating">
+                  <input type="text" class="form-control" name="name" id="name" placeholder="Your Name" required>
+                  <label>Your Name</label>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-floating">
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
+                  <label>Email Address</label>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-floating">
+                  <input type="tel" class="form-control" name="number" id="number" placeholder="Phone">
+                  <label>Phone Number</label>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-floating">
+                  <select class="form-select" name="subject" id="subject" required>
+                    <option value="" disabled selected>Service Needed</option>
+                    <option>Furnace Repair</option>
+                    <option>AC Installation</option>
+                    <option>Heat Pump</option>
+                    <option>Maintenance</option>
+                    <option>Emergency</option>
+                  </select>
+                  <label>Service</label>
+                </div>
+              </div>
+              <div class="col-12">
+                <div class="form-floating">
+                  <textarea class="form-control" name="message" id="message" placeholder="Message" style="height: 100px" required></textarea>
+                  <label>Your Message</label>
+                </div>
+              </div>
+              <div class="col-12">
+                <button type="submit" class="th-btn w-100 py-3 rounded-pill fw-bold">
+                  Send Message <i class="fas fa-paper-plane ms-2"></i>
+                </button>
+              </div>
             </div>
-            <p class="form-messages mb-0 mt-3"></p>
+            <p class="form-messages mt-3 text-center mb-0"></p>
           </form>
         </div>
-        <div class="col-xl-6 mt-5 mt-xl-0">
-          <div class="text-center"><a href="https://www.youtube.com/watch?v=_sI_Ps7JSEk"
-              class="play-btn style4 popup-video"><i class="fa-sharp fa-solid fa-play"></i></a></div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Background Shapes -->
+  <div class="shape-1" style="position: absolute; top: 10%; left: 5%; width: 300px; height: 300px; background: radial-gradient(circle, rgba(42,7,249,0.1) 0%, transparent 70%); border-radius: 50%;"></div>
+  <div class="shape-2" style="position: absolute; bottom: 15%; right: 8%; width: 400px; height: 400px; background: radial-gradient(circle, rgba(6,143,255,0.1) 0%, transparent 70%); border-radius: 50%;"></div>
+</div>
+<!-- ===== HERO END ===== -->
+
+<!-- ===== CONTACT INFO CARDS ===== -->
+<div class="space bg-white">
+  <div class="container">
+    <div class="row g-4 justify-content-center">
+      <!-- Address -->
+      <div class="col-md-6 col-lg-4">
+        <div class="info-card text-center p-4 bg-gradient-primary text-white rounded-4 shadow-lg h-100 d-flex flex-column justify-content-center">
+          <div class="icon mb-3">
+            <i class="fas fa-location-dot fa-2x"></i>
+          </div>
+          <h5 class="fw-bold">Visit Our Office</h5>
+          <p class="mb-0 small opacity-90">
+            19 Stoney Lake Bay<br>
+            Winnipeg, MB R2W 1K7<br>
+            Canada
+          </p>
+        </div>
+      </div>
+
+      <!-- Phone -->
+      <div class="col-md-6 col-lg-4">
+        <div class="info-card text-center p-4 bg-gradient-success text-white rounded-4 shadow-lg h-100 d-flex flex-column justify-content-center">
+          <div class="icon mb-3">
+            <i class="fas fa-phone-volume fa-2x"></i>
+          </div>
+          <h5 class="fw-bold">Call Us Now</h5>
+          <p class="mb-0">
+            <a href="tel:+(204)951-1317" class="text-white text-decoration-none">+(204) 951-1317</a>
+          </p>
+          <small>24/7 Emergency Support</small>
+        </div>
+      </div>
+
+      <!-- Email -->
+      <div class="col-md-6 col-lg-4">
+        <div class="info-card text-center p-4 bg-gradient-warning text-white rounded-4 shadow-lg h-100 d-flex flex-column justify-content-center">
+          <div class="icon mb-3">
+            <i class="fas fa-envelope fa-2x"></i>
+          </div>
+          <h5 class="fw-bold">Email Us</h5>
+          <p class="mb-0">
+            <a href="mailto:support24@rakar.com" class="text-white text-decoration-none">support24@rakar.com</a>
+          </p>
         </div>
       </div>
     </div>
   </div>
-  <div class="contact-map"><iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3644.7310056272386!2d89.2286059153658!3d24.00527418490799!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39fe9b97badc6151%3A0x30b048c9fb2129bc!2sAngfuztheme!5e0!3m2!1sen!2sbd!4v1651028958211!5m2!1sen!2sbd"
-      allowfullscreen="" loading="lazy"></iframe></div>
+</div>
+<!-- ===== INFO CARDS END ===== -->
+
+<!-- ===== INTERACTIVE MAP ===== -->
+<div class="contact-map overflow-hidden rounded-bottom-5 shadow-lg">
+  <iframe
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2569.598465356477!2d-97.146726684!3d49.935678979!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52ea73f!2s19+Stoney+Lake+Bay%2C+Winnipeg%2C+MB+R2W+1K7!5e0!3m2!1sen!2sca!4v1651028958211!5m2!1sen!2sca"
+    width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+  </iframe>
+</div>
+<!-- ===== ULTRA PREMIUM CONTACT PAGE END ===== -->
   <footer class="footer-wrapper footer-layout1" data-bg-src="assets/img/bg/footer_bg_1.jpg">
     <div class="shape-mockup spin" data-top="14%" data-left="4%"><img src="assets/img/shape/dots_1.svg" alt="shape">
     </div>
