--- a/service.html
+++ b/service.html
@@ -258,7 +258,7 @@
               <ul>
                 <li class="d-none d-md-inline-block"><i class="fas fa-messages"></i> <a href="faq.html">FAQ</a></li>
                 <li><i class="fas fa-headset"></i> <a href="contact.html">Support</a></li>
-                <li><i class="fas fa-user"></i> <a href="contact.html">Sign In / Register</a></li>
+                <!-- <li><i class="fas fa-user"></i> <a href="contact.html">Sign In / Register</a></li> -->
               </ul>
             </div>
           </div>
